--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark">
@@ -13,9 +12,9 @@
         android:src="@drawable/home_bg" />
 
     <ImageView
+        android:id="@+id/imageViewLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageViewLogo"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
@@ -23,78 +22,79 @@
         android:contentDescription="@string/logo_text" />
 
     <TextView
+        android:id="@+id/textViewLine1"
         style="@style/LoginTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/twilio_first_line"
-        android:id="@+id/textViewLine1"
         android:layout_below="@+id/imageViewLogo"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/twilio_first_line"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
+        android:id="@+id/textViewLine2"
         style="@style/LoginTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/twilio_second_line"
-        android:id="@+id/textViewLine2"
         android:layout_below="@+id/textViewLine1"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/twilio_second_line"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Button
-        style="@style/LoginButton"
-        android:text="@string/forgot_password_go_back_button_text"
         android:id="@+id/buttonGoBack"
+        style="@style/LoginButton"
         android:layout_above="@+id/linearLayoutTextFields"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/forgot_password_go_back_button_text" />
 
     <LinearLayout
+        android:id="@+id/linearLayoutTextFields"
         style="@style/LoginElementSideMargin"
-        android:orientation="vertical"
         android:layout_height="wrap_content"
-        android:background="@color/login_tf_group_gray"
         android:layout_above="@+id/buttonSend"
-        android:id="@+id/linearLayoutTextFields">
+        android:background="@color/login_tf_group_gray"
+        android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/layoutEmail"
             style="@style/LoginFormLayout"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/layoutEmail"
-            android:layout_marginTop="7dp">
+            android:layout_marginTop="7dp"
+            android:orientation="horizontal">
 
             <ImageView
                 style="@style/LoginTextEditImage"
                 android:background="@drawable/username_field_bg"
-                android:contentDescription="@string/image_text"/>
+                android:contentDescription="@string/image_text" />
 
             <EditText
+                android:id="@+id/editTextEmail"
                 style="@style/LoginTextEdit"
                 android:layout_width="match_parent"
-                android:inputType="textEmailAddress"
                 android:hint="@string/email_placeholder"
-                android:id="@+id/editTextEmail" />
+                android:inputType="textEmailAddress" />
         </LinearLayout>
     </LinearLayout>
 
     <Button
-        style="@style/LoginButton"
-        android:text="@string/forgot_password_send_button_text"
         android:id="@+id/buttonSend"
-        android:background="@color/login_button_background"
+        style="@style/LoginButton"
         android:layout_above="@+id/textViewForgotMessage"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginBottom="10dp"
+        android:background="@color/login_button_background"
+        android:text="@string/forgot_password_send_button_text" />
+
     <TextView
+        android:id="@+id/textViewForgotMessage"
         style="@style/LoginTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/forgot_password_message"
-        android:id="@+id/textViewForgotMessage"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="40dp"
-        android:textAlignment="center"/>
+        android:text="@string/forgot_password_message"
+        android:textAlignment="center"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 </RelativeLayout>
