--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -10,36 +9,38 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="7dp"
-        android:paddingBottom="7dp"
+        android:layout_gravity="center"
         android:orientation="horizontal"
-        android:layout_gravity="center">
+        android:paddingBottom="7dp"
+        android:paddingLeft="7dp">
 
         <TextView
             android:id="@+id/textViewAuthor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/message_text_color"
-            android:textSize="14sp"
             android:fontFamily="sans-serif-medium"
-            android:text="Author" />
+            android:text="Author"
+            android:textColor="@color/message_text_color"
+            android:textSize="14sp" />
+
         <TextView
             android:id="@+id/textViewDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/message_date_color"
-            android:textSize="12sp"
-            android:fontFamily="sans-serif-thin"
             android:layout_marginLeft="12dp"
-            android:text="Date" />
+            android:fontFamily="sans-serif-thin"
+            android:text="Date"
+            android:textColor="@color/message_date_color"
+            android:textSize="12sp" />
     </LinearLayout>
+
     <TextView
         android:id="@+id/textViewMessage"
-        android:paddingLeft="7dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/message_text_color"
         android:fontFamily="sans-serif-light"
-        android:textSize="14sp"
-        android:text="Hello" />
+        android:paddingLeft="7dp"
+        android:text="Hello"
+        android:textColor="@color/message_text_color"
+        android:textSize="14sp" />
 </LinearLayout>
