--- a/app/src/main/res/layout/activity_main_chat.xml
+++ b/app/src/main/res/layout/activity_main_chat.xml
@@ -40,7 +40,7 @@
                 <TableLayout
                     android:id="@+id/tableLayoutChannels"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical" />
             </ScrollView>
 
