--- a/app/src/main/res/layout/app_bar_main_chat.xml
+++ b/app/src/main/res/layout/app_bar_main_chat.xml
@@ -27,7 +27,10 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <include layout="@layout/content_main_chat" />
+        <FrameLayout
+             android:id="@+id/fragment_container"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent" />
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
