--- a/app/src/main/res/layout/activity_main_chat.xml
+++ b/app/src/main/res/layout/activity_main_chat.xml
@@ -25,7 +25,7 @@
             android:layout_height="match_parent">
 
             <include
-                android:id="@+id/toolbar"
+                android:id="@+id/toolbarPlaceholder"
                 layout="@layout/nav_header_main_chat" />
 
             <ListView
@@ -33,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_above="@+id/button"
-                android:layout_below="@+id/toolbar"
+                android:layout_below="@+id/toolbarPlaceholder"
                 android:scrollbars="none"
                 android:divider="@null"
                 android:dividerHeight="0dp"
