Add status updates on the channel, user joined or left

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="menu_username_color">#380604</color>
     <color name="message_date_color">#BA9E9E</color>
     <color name="message_text_color">#5B4F51</color>
+    <color name="status_text_color">#939598</color>
 </resources>
