--- a/app/src/main/res/menu/main_chat.xml
+++ b/app/src/main/res/menu/main_chat.xml
@@ -6,4 +6,9 @@
         android:orderInCategory="100"
         android:title="@string/action_leave_channel"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_delete_channel"
+        android:orderInCategory="101"
+        android:title="@string/action_delete_channel"
+        app:showAsAction="never" />
 </menu>
