--- a/app/src/main/res/layout/input_dialog_view.xml
+++ b/app/src/main/res/layout/input_dialog_view.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:orientation="vertical"
               android:padding="10dp">
+
     <TextView
         android:id="@+id/textViewMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/new_channel_prompt"
-        android:textColor="@android:color/white"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/white"/>
 
     <EditText
         android:id="@+id/editTextUserInput"
@@ -19,7 +20,7 @@
         android:textColor="@android:color/white"
         android:textSize="14sp">
 
-        <requestFocus />
+        <requestFocus/>
     </EditText>
 
 </LinearLayout>
