--- a/app/src/main/res/layout/fragment_main_chat.xml
+++ b/app/src/main/res/layout/fragment_main_chat.xml
@@ -31,32 +31,32 @@
             android:id="@+id/editTextMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="40dp"
-            android:maxHeight="100dp"
             android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
-            android:padding="7dp"
+            android:layout_marginTop="5dp"
             android:layout_toLeftOf="@+id/buttonSend"
             android:background="@drawable/message_input_shape"
             android:hint="@string/message_elipses"
+            android:maxHeight="100dp"
+            android:maxLength="200"
+            android:minHeight="40dp"
+            android:padding="7dp"
             android:textColor="@android:color/black"
-            android:textSize="14sp"
-            android:maxLength="200"/>
+            android:textSize="14sp"/>
 
         <Button
             android:id="@+id/buttonSend"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:minHeight="40dp"
-            android:maxHeight="100dp"
-            android:gravity="center"
             android:layout_alignBottom="@+id/editTextMessage"
-            android:layout_alignTop="@+id/editTextMessage"
             android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/editTextMessage"
             android:layout_gravity="center_vertical"
             android:layout_margin="1dp"
             android:background="@android:color/transparent"
+            android:gravity="center"
+            android:maxHeight="100dp"
+            android:minHeight="40dp"
             android:text="Send"
             android:textColor="@color/colorAccent"/>
     </RelativeLayout>
