--- a/app/src/main/res/layout/activity_main_chat.xml
+++ b/app/src/main/res/layout/activity_main_chat.xml
@@ -29,19 +29,27 @@
                 android:id="@+id/toolbarPlaceholder"
                 layout="@layout/nav_header_main_chat"/>
 
-            <ListView
-                android:id="@+id/listViewChannels"
+            <android.support.v4.widget.SwipeRefreshLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@+id/buttonAddChannel"
-                android:layout_below="@+id/toolbarPlaceholder"
-                android:divider="@null"
-                android:dividerHeight="0dp"
+                android:id="@+id/refreshLayout"
                 android:padding="0dp"
-                android:scrollbars="none"
-                tools:listitem="@layout/channel">
+                android:layout_above="@+id/buttonAddChannel"
+                android:layout_below="@+id/toolbarPlaceholder">
 
-            </ListView>
+                <ListView
+                    android:id="@+id/listViewChannels"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:divider="@null"
+                    android:dividerHeight="0dp"
+                    android:padding="0dp"
+                    android:scrollbars="none"
+                    tools:listitem="@layout/channel">
+
+                </ListView>
+
+            </android.support.v4.widget.SwipeRefreshLayout>
 
             <Button
                 android:id="@+id/buttonAddChannel"
